--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -5,17 +5,18 @@
     display:flex;
     margin-left: 10px;
     margin-right: 10px;
-    height: 67px;
+    min-height: 67px;
     align-items: center;
     margin-top: 25px;
+
 }
 
 .taskGeneral:hover .buttons{
-    display: block;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 
 }
-
-
 .taskGeneral:hover .descricao{
     display: block;
     margin-left: 10px;
@@ -23,26 +24,40 @@
     border-top: none;
 }
 
+.descricao div{
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .descricao{
     display: none;
     font-family: 'Lato', sans-serif;
     border: 2px black solid;
+    font-size: x-large;
+    min-height: 50px;
+    
 }
+ 
+
+
 
 .buttons{
-    
-    height: 100%;
+    min-height: 67px;
+    width: 67px;
     display: none;
    float: right;
     color: white;
     background-color: red;
     margin-right: 0%;
-    
+    /* padding-top: 30px; */
+
 }
 
 .title{
     width: 80%;
     text-align: center;
+    font-size:x-large
 }
 
 .deadline{
@@ -50,7 +65,7 @@
    padding-left: 0px;
     border-right: 1px solid black;
     width: 20%;
-    height:80%;
+    min-height: 55px;
     display: flex;
     align-items: center;
     justify-content: center;
