concluido por enquanto

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,13 +2,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Poppins:wght@300&display=swap');
 
+@media (max-width: 499px) {
+    #container{
+         min-width: 300px;
+         max-width: 300px;
+    }
+
+    button{
+        font-size:50px ;
+        margin-top: 30px;
+        color: white;
+        background-color: rgb(207, 74, 96);
+        border: none;
+        height: 120px;
+        width: 200px;
+    }
+  }
+
 
 #container{
     font-family: 'Lato', sans-serif;
     display: inline-block;
     text-align: center;
     width: 500px;
-    height: 600px;
+    min-height: 600px;
     background-color: white;
     border:1px solid black;
     border-radius: 20px;
